--- a/projects/nextjs/index.html
+++ b/projects/nextjs/index.html
@@ -5,10 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Project Preview</title>
   <link rel="stylesheet" href="/styles.css" />
-  <style>
-    .container{max-width:960px;margin:0 auto;padding:24px}
-    .panel{background:#181824;border:1px solid #26273a;border-radius:14px;padding:16px}
-  </style>
+  <style>.container{max-width:960px;margin:0 auto;padding:24px}.panel{background:#181824;border:1px solid #26273a;border-radius:14px;padding:16px}</style>
 </head>
 <body>
   <div class="container">
