--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -3,14 +3,90 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Project Preview</title>
+  <title>JavaScript • Preview</title>
   <link rel="stylesheet" href="/styles.css" />
-  <style>.container{max-width:960px;margin:0 auto;padding:24px}.panel{background:#181824;border:1px solid #26273a;border-radius:14px;padding:16px}</style>
+  <style>
+    .container{max-width:960px;margin:0 auto;padding:24px}
+    .panel{background:#181824;border:1px solid #26273a;border-radius:14px;padding:16px;margin-bottom:16px}
+    .demo-frame{width:100%;height:60vh;border:1px solid #26273a;border-radius:12px;background:#0a0a14}
+    .files{display:flex;gap:8px;flex-wrap:wrap;margin:8px 0}
+    .code{background:#0a0a14;border:1px solid #26273a;border-radius:12px;padding:12px;overflow:auto;white-space:pre; font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace; font-size: 13px;}
+    .file-block{margin:12px 0}
+    .file-head{display:flex;align-items:center;justify-content:space-between;margin:6px 0 4px}
+    .copy{font-size:12px;border:1px solid #26273a;background:#121228;color:#e8e8f0;border-radius:8px;padding:4px 8px;cursor:pointer}
+  </style>
 </head>
 <body>
   <div class="container">
-    <h1>My Project</h1>
-    <p class="panel">Replace this with screenshots, notes, or an embedded demo.</p>
+    <h1>JavaScript</h1>
+
+    <section class="panel">
+      <h2>Live Demo</h2>
+      <p>This is your running code. It loads <code>projects/javascript/demo/index.html</code>.</p>
+      <p><a href="demo/index.html" target="_blank" rel="noopener">Open demo in new tab ↗</a></p>
+      <iframe class="demo-frame" src="demo/index.html" title="JavaScript Demo"></iframe>
+    </section>
+
+    <section class="panel">
+      <h2>Source Code</h2>
+      <div id="files" class="files"></div>
+      <div id="codeArea"></div>
+    </section>
   </div>
+
+  <script>
+    
+    const FILES = [
+      {label: "demo/index.html", path: "demo/index.html"},
+      {label: "demo/app.js", path: "demo/app.js"},
+      {label: "demo/styles.css", path: "demo/styles.css"}
+    ];
+
+    const filesBar = document.getElementById('files');
+    const codeArea = document.getElementById('codeArea');
+
+    function renderFile(label, text) {
+      const wrap = document.createElement('div');
+      wrap.className = "file-block";
+      wrap.innerHTML = `
+        <div class="file-head">
+          <strong>${label}</strong>
+          <button class="copy">Copy</button>
+        </div>
+        <pre class="code"><code>${text
+          .replace(/&/g,"&amp;")
+          .replace(/</g,"&lt;")
+          .replace(/>/g,"&gt;")}</code></pre>
+      `;
+      wrap.querySelector(".copy").addEventListener("click", async () => {
+        await navigator.clipboard.writeText(text);
+        wrap.querySelector(".copy").textContent = "Copied!";
+        setTimeout(() => wrap.querySelector(".copy").textContent = "Copy", 1200);
+      });
+      codeArea.appendChild(wrap);
+    }
+
+    async function loadFiles() {
+      for (const f of FILES) {
+        const btn = document.createElement('button');
+        btn.textContent = f.label;
+        btn.className = "copy"; // reuse style for little pills
+        btn.addEventListener("click", () => {
+          const el = [...codeArea.children].find(div => div.querySelector("strong")?.textContent === f.label);
+          el?.scrollIntoView({behavior:"smooth", block:"start"});
+        });
+        filesBar.appendChild(btn);
+
+        try {
+          const res = await fetch(f.path);
+          const text = await res.text();
+          renderFile(f.label, text);
+        } catch (e) {
+          renderFile(f.label, "// Could not load " + f.path + "\\n" + String(e));
+        }
+      }
+    }
+    loadFiles();
+  </script>
 </body>
 </html>
