--- a/projects/javascript/demo/guessing_game/index.html
+++ b/projects/javascript/demo/guessing_game/index.html
@@ -10,10 +10,11 @@
   <button id="start-button">Start Game</button>
   <p id="message"></p>
 
+  <div class="panel">…</div>
+
   <script src="script.js"></script>
 </body>
 </html>
-
 
 
 
