Portfolio final pass: themed landing pages + JS demos + Python placeholders

--- a/projects/javascript/demo/guessing_game/index.html
+++ b/projects/javascript/demo/guessing_game/index.html
@@ -10,7 +10,7 @@
   <button id="start-button">Start Game</button>
   <p id="message"></p>
 
-  <div class="panel">…</div>
+  <div class="panel"></div>
 
   <script src="script.js"></script>
 </body>
