--- a/projects/javascript/demo/shopping_cart/index.html
+++ b/projects/javascript/demo/shopping_cart/index.html
@@ -13,7 +13,7 @@
 
   <p id="total"></p>
 
-  <div class="container">…</div>
+  <div class="container"></div>
   
   <button type="button" id="checkout" onclick="checkout()">Checkout</button>
 
