--- a/projects/‌index.html
+++ b/projects/‌index.html
@@ -13,6 +13,7 @@
     .open{display:inline-block;margin-top:8px;padding:8px 12px;background:#A3B18A;color:#fff;border-radius:6px;text-decoration:none}
     iframe{width:100%;height:60vh;border:1px solid #ccc;border-radius:8px;background:#fff;margin-top:10px}
   </style>
+  <link rel="stylesheet" href="/landing-min-theme.css">
 </head>
 <body>
   <div class="wrap">
