Fix Python Work: remove placeholders, keep only Django

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   </header>
 
   <main class="content">
-    
     <section id="projects" class="projects" aria-live="polite">
 
       <article class="project-card" id="proj-javascript">
@@ -24,8 +23,8 @@
 
       <article class="project-card" id="proj-python">
         <h2>Python Work</h2>
-        <p>Python scripts, exercises and mini projects.</p>
-        <a class="open" href="projects/python_work/index.html" target="_blank" rel="noopener">Open Python Work</a>
+        <p>One project: <strong>Django</strong>.</p>
+        <a class="open" href="projects/python_work/index.html" target="_blank" rel="noopener">Open Django Project</a>
       </article>
 
       <article class="project-card" id="proj-htmx">
@@ -60,7 +59,6 @@
 
     </section>
 
-    
     <section class="add-area" aria-label="Add a project">
       <h3>Add a Project</h3>
       <label>Title:
@@ -87,4 +85,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
