--- a/projects/python_work/index.html
+++ b/projects/python_work/index.html
@@ -3,66 +3,21 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Python Projects</title>
+  <title>Python Work</title>
 
-  
   <link rel="stylesheet" href="../../styles.css">
   <link rel="stylesheet" href="../../landing_theme.css">
-
-  
-  <style>
-    .cards{
-      display:grid;
-      grid-template-columns:repeat(auto-fit, minmax(320px, 1fr));
-      gap:24px;
-      margin-top:12px;
-    }
-    .card{
-      padding:16px;
-      border-radius:14px;
-      border:1px solid var(--ring, #2e3753);
-      background: linear-gradient(180deg, #262f45, #222a40);
-      box-shadow: 0 10px 22px -12px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.03);
-    }
-
-   
-    a.open{
-      display:inline-block;
-      padding:10px 14px;
-      border-radius:10px;
-      text-decoration:none;
-      color:#0e1220;
-      background:linear-gradient(135deg, var(--accent-2,#ff8ec7), var(--accent,#ff5ca8));
-      border:1px solid rgba(255,255,255,.14);
-      box-shadow:0 10px 18px -8px rgba(255,92,168,.45);
-      font-weight:600;
-    }
-    a.open:hover{ filter:saturate(1.06); }
-  </style>
 </head>
 <body>
   <h1>Python Work</h1>
-  <p>Three python demo projects.</p>
+  <p>One python project: <strong>Django</strong>.</p>
 
   <div class="cards">
     <section class="card">
-      <h2>Alien Invasion</h2>
-      <p>Pygame project placeholder.</p>
-      <a class="open" href="demo/alien_invasion/index.html" target="_blank" rel="noopener">Open demo</a>
-    </section>
-
-    <section class="card">
-      <h2>Data Visualisation</h2>
-      <p>Charts placeholder.</p>
-      <a class="open" href="demo/data_visualisation/index.html" target="_blank" rel="noopener">Open demo</a>
-    </section>
-
-    <section class="card">
       <h2>Django</h2>
-      <p>Server app placeholder.</p>
-      <a class="open" href="demo/django/index.html" target="_blank" rel="noopener">Open demo</a>
+      <p>Server app (GitHub Pages can’t run Django — deployed separately).</p>
+      <a class="open" href="demo/django/index.html" target="_blank" rel="noopener">Open Django Project</a>
     </section>
   </div>
 </body>
 </html>
-
