Add live Django CMS link to portfolio

--- a/index.html
+++ b/index.html
@@ -27,13 +27,10 @@
         <a class="open" href="projects/python_work/index.html" target="_blank" rel="noopener">Open Django Project</a>
       </article>
 
-      <!-- NEW Django CMS card -->
       <article class="project-card" id="proj-django-cms">
         <h2>Django CMS</h2>
-        <p>Live deployment of my Django CMS project (database-backed CRUD with admin).</p>
-        <a class="open" href="https://portfolio-cms.onrender.com/" target="_blank" rel="noopener">
-          Open Django CMS (Render)
-        </a>
+        <p>Database-backed site with admin & CRUD.</p>
+        <a class="open" href="https://portfolio-cms-kfu5.onrender.com" target="_blank" rel="noopener">Open Django CMS</a>
       </article>
 
       <article class="project-card" id="proj-htmx">
