Initial commit: portfolio site

--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+          <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Home"/>
+    <meta property="og:description" content="Selected work, case studies, and contact."/>
+<meta name="description" content="Portfolio – Home. Projects, skills, and contact information." />
+<meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>My Portfolio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <a class="skip-to-content" href="#main">Skip to content</a>
   <header class="site-header">
-    <h1>My Portfolio</h1>
+            <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Home"/>
+    <meta property="og:description" content="Selected work, case studies, and contact."/>
+<meta name="description" content="Portfolio – Home. Projects, skills, and contact information." />
+<h1>My Portfolio</h1>
     <p class="subtitle">This is where my projects live. Click a card to open.</p>
   </header>
 
-  <main class="content">
+  <main id="main" class="content">
     <section id="projects" class="projects" aria-live="polite">
 
       <article class="project-card" id="proj-javascript">
