--- a/projects/javascript/demo/guessing_game/index.html
+++ b/projects/javascript/demo/guessing_game/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+              <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta property="og:type" content="website"/>
+    <meta property="og:title" content="projects javascript demo guessing_game"/>
+    <meta property="og:description" content="Selected work, case studies, and contact."/>
+<meta name="description" content="Portfolio – projects javascript demo guessing_game. Projects, skills, and contact information." />
+<meta charset="UTF-8">
   <title>Guessing Game</title>
   <link rel="stylesheet" href="styles.css">
 </head>
