--- a/projects/nextjs/index.html
+++ b/projects/nextjs/index.html
@@ -1,7 +1,11 @@
 ﻿<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+          <meta property="og:type" content="website"/>
+    <meta property="og:title" content="projects nextjs"/>
+    <meta property="og:description" content="Selected work, case studies, and contact."/>
+<meta name="description" content="Portfolio – projects nextjs. Projects, skills, and contact information." />
+<meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>NextJS Projects</title>
 
